Added some new files to the project

--- a/main.html
+++ b/main.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Thribhu's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-    
+
+<body style="font-family: Arial">  
+  
+  <div class="topnav">
+    <a href="/main.html" class="active">Home</a>
+    <a href="https://doyourbit.themediocredev.me" target="_blank" rel="noopener noreferrer">Folio</a>
+    <a href="/awards.html">Awards</a>
+    <a href="/socials.html">Socials</a>
+  </div>
+
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>I am Thribhu Krishnan</h1>
+      <p>and I am a programmer who can code</p>
+      <img alt="Javascript, CSS, and HTML Logo all together" src="./images/clipart.png" length="50" width="50">
+    </div>
+  </div>
+
+  <p>Hi there, I am Thribhu Krishnan. I am also known by many username aliases.</p>
+
+  <div class="about-me-v1">
+    <p>I am 13 years old, and I have currently learnt how to code in HTML5, Javascript. </p>
+    <p>I am currently working on my folio for my do your bit project. </p>
+    <h6>last updated 26/03/2022</h6>
+  </div>
+
+  <div class="about-me-v2">
+    <p>I am 13 years old, and I have currently learnt how to code in HTML5, node.js and Python. </p>
+    <p>I am currently working on my game called Fireplace. You can play the beta game on my GitHub profile in my 'Socials Tab'. </p>
+    <h6>last updated 30/07/2022</h6>
+    </div>
+  
+  <script src="script.js"></script>
 </body>
+
 </html>
